@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-2-Clause
 /*
-Copyright 2005-2006 Bernard Parent
+Copyright 2005-2006,2020 Bernard Parent
 
 Redistribution and use in source and binary forms, with or without modification, are
 permitted provided that the following conditions are met:
@@ -66,7 +66,7 @@ void write_bdry_fluid_template(FILE **controlfile){
     "    BDRY_OUTFLOWSUBSONICMFIXED1       %c   Outflow, subsonic, M fixed, 1o\n"
     "    BDRY_SYMMETRICAL2                 %c   Symmetrical, 2o\n"
     "    BDRY_SYMMETRICAL1                 %c   Symmetrical, 1o\n"
-    "    BDRY_WALLTFIXED1                  %c   Wall, T specified, 1o\n"
+    "    BDRY_WALLTFIXED1                  %c   Wall, T specified, 1o, param Twall\n"
     "    BDRY_WALLADIABATIC1               %c   Wall, Adiabatic, 1o\n"
     "    BDRY_SLIPWALL1                    %c   Slip wall, Adiabatic, 1o\n"
     "    BDRY_FREESTREAM1                  %c   Freestream, 1o, params Vx,Vy,"if3DL("Vz,")" P, T\n"
@@ -75,8 +75,9 @@ void write_bdry_fluid_template(FILE **controlfile){
     "    All(BDRY_WALLTFIXED1);\n"
     "    Plane(\"i\",is,BDRY_INFLOWSUPERSONIC);\n"
     "    Plane(\"i\",ie,BDRY_OUTFLOWSUPERSONIC1);\n"
-    "    Plane(\"j\",js,BDRY_WALLTFIXED1);\n"
-    "    Plane(\"j\",je,BDRY_WALLTFIXED1);\n"
+    "    Twall=300.0; {K}\n"
+    "    Plane(\"j\",js,BDRY_WALLTFIXED1,Twall);\n"
+    "    Plane(\"j\",je,BDRY_WALLTFIXED1,Twall);\n"
 #ifdef _3D
     "    Plane(\"k\",ks,BDRY_SYMMETRICAL2);\n"
     "    Plane(\"k\",ke,BDRY_SYMMETRICAL2);\n"
@@ -327,7 +328,7 @@ static void update_bdry_wall(np_t *np, gl_t *gl, long lA, long lB, long lC,
     Twall=_f_symmetry(ACCURACY,_T(np[lB],gl),_T(np[lC],gl));
     Tvwall=_f_symmetry(ACCURACY,_Tv(np[lB]),_Tv(np[lC]));
   } else {
-    Twall=_T(np[lA],gl);
+    Twall=_bdry_param(np,gl,lA,0,TYPELEVEL_FLUID_WORK);
     Tvwall=Twall;
     // make the vibrational temperature at the wall adiabatic
     //Tvwall=_f_symmetry(ACCURACY,_Tv(np[lB]),_Tv(np[lC]));
